--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -41,3 +41,5 @@ parameters:
     bitcoin_docker_compose_path: '/var/bitcoinWalletCLI/docker-compose.yml'
 
     ethereum_host: http://192.168.1.110:7545
+    brute_force_config:
+        fails_username_hour: 6
