--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,24 @@
     },
     "require": {
         "php": ">=7",
+        "beberlei/DoctrineExtensions": "^1.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "^2.0",
         "giggsey/libphonenumber-for-php": "^8.5",
-        "guzzlehttp/guzzle": "^6.3",
         "graze/guzzle-jsonrpc": "^3.2",
+        "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.4",
         "nelmio/cors-bundle": "^1.5",
+        "paypro/ethereum": "dev-develop",
         "respect/validation": "^1.1",
         "richsage/rms-push-notifications-bundle": "^0.2.3",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/event-dispatcher": "3.2.*",
         "symfony/monolog-bundle": "^3.0.2",
         "symfony/polyfill-apcu": "^1.0",
@@ -43,8 +46,7 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
         "twig/twig": "^1.0||^2.0",
-        "twilio/sdk": "^5.11",
-        "paypro/ethereum": "dev-develop"
+        "twilio/sdk": "^5.11"
     },
     "require-dev": {
         "phploc/phploc": "^4.0",
