--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: lexik_jwt.yml }
     - { resource: nelmio_cors.yml }
+    - { resource: stof_doctrine_extension.yml }
     - { resource: mysql.yml }
     - { resource: fos_user.yml }
     - { resource: rms_push_notifications.yml }
